tests/valid/function/generic_expected_if_branches.facet
struct Token<T> {
}

fn make<T>() -> affine Token<affine T> {
  Token<affine T> { }
}

fn main() -> affine Token<affine isize> {
  if true { (make) } else { (make) }
}
