tests/invalid/function/generic_bound_unknown_trait.facet
fn bad<T>(x: affine T) -> affine T where T: Missing {
  x
}

